refactor: try a stable solution strategy