@@ -10,11 +10,10 @@ FROM eclipse-temurin:21-jre-alpine
 WORKDIR /app
 COPY --from=build /app/target/*.jar app.jar
 EXPOSE 8080
-ENV JAVA_OPTS="-XX:+UseZGC \
-               -XX:MaxRAMPercentage=75 \
-               -XX:InitialRAMPercentage=50 \
-               -XX:+UseStringDeduplication \
+ENV JAVA_OPTS="-XX:+UseG1GC \
+               -XX:MaxGCPauseMillis=50 \
+               -Xms100m \
+               -Xmx100m \
                -Xss256k \
-               --enable-preview \
                -Djava.security.egd=file:/dev/./urandom"
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -jar app.jar"]
